# servant-static-th

./: .gitignore  .travis.yml  CHANGELOG.md  Makefile  README.md  servant-raw-th.cabal  servant-static-th.cabal  stack.yaml
.github/workflows/: ci.yml
example/: Example.hs
example/example-dir/dir/: example.js
src/Servant/Raw/: TH.hs
src/Servant/Raw/TH/: Internal.hs
src/Servant/Static/: TH.hs
src/Servant/Static/TH/: Internal.hs
src/Servant/Static/TH/Internal/: Api.hs  CompressedData.hs  FileTree.hs  Mime.hs  Server.hs
test/: DocTest.hs  Spec.hs
test/Spec/: ApiSpec.hs  HelperFuncSpec.hs  ServerSpec.hs
test/test-dir/dir/: test-brotli.js.br
