name:                servant-raw-th
version:             0.1.0.0
synopsis:            Quasi-quoters for XML and HTML Documents
description:         Please see <https://github.com/cdepillabout/servant-raw-th#readme README.md>.
homepage:            https://github.com/cdepillabout/servant-raw-th
license:             BSD3
license-file:        LICENSE
author:              Dennis Gosnell
maintainer:          cdep.illabout@gmail.com
copyright:           2017 Dennis Gosnell
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Servant.Raw.TH
                     , Servant.Raw.TH.Internal
  build-depends:       base >= 4.8 && < 5
                     , blaze-html
                     , bytestring
                     , directory >= 1.2.5.0
                     , filepath
                     , semigroups
                     , servant
                     , servant-blaze
                     , servant-server
                     , template-haskell
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction
  other-extensions:    TemplateHaskell

-- test-suite servant-raw-th-doctest
--   type:                exitcode-stdio-1.0
--   main-is:             DocTest.hs
--   hs-source-dirs:      test
--   build-depends:       base
--                      , doctest
--                      , Glob
--   default-language:    Haskell2010
--   ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite servant-raw-th-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  build-depends:       base
                     , directory
                     , filepath
                     , tasty
                     , tasty-hunit
                     , servant-raw-th
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction

source-repository head
  type:     git
  location: git@github.com:cdepillabout/servant-raw-th.git
